--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>Swagger-code-builder by WorksApplications</title>
+    <title>Swagger Code Builder by WorksApplications</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
@@ -11,7 +11,7 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Swagger-code-builder</h1>
+      <h1 class="project-name">Swagger Code Builder</h1>
       <h2 class="project-tagline">A project generator from Swagger specification</h2>
       <a href="https://github.com/WorksApplications/swagger-code-builder" class="btn">View on GitHub</a>
       <a href="https://github.com/WorksApplications/swagger-code-builder/zipball/master" class="btn">Download .zip</a>
